Assert taken from junit-4.8.2 sources, the rest remains copied from junit-3.8.1 sources