@@ -92,12 +92,9 @@ public class Assert {
 	 * value is infinity then the delta value is ignored.
 	 */
 	static public void assertEquals(String message, double expected, double actual, double delta) {
-		// handle infinity specially since subtracting to infinite values gives NaN and the
-		// the following test fails
-		if (Double.isInfinite(expected)) {
-			if (!(expected == actual))
-				failNotEquals(message, new Double(expected), new Double(actual));
-		} else if (!(Math.abs(expected-actual) <= delta)) // Because comparison with NaN always returns false
+		if (Double.compare(expected, actual) == 0)
+			return;
+		if (!(Math.abs(expected-actual) <= delta))
 			failNotEquals(message, new Double(expected), new Double(actual));
 	}
 	/**
@@ -108,18 +105,15 @@ public class Assert {
 	    assertEquals(null, expected, actual, delta);
 	}
 	/**
-	 * Asserts that two floats are equal concerning a delta. If they are not
-	 * an AssertionFailedError is thrown with the given message.  If the expected
-	 * value is infinity then the delta value is ignored.
+	 * Asserts that two floats are equal concerning a positive delta. If they
+	 * are not an AssertionFailedError is thrown with the given message. If the
+	 * expected value is infinity then the delta value is ignored.
 	 */
 	static public void assertEquals(String message, float expected, float actual, float delta) {
- 		// handle infinity specially since subtracting to infinite values gives NaN and the
-		// the following test fails
-		if (Float.isInfinite(expected)) {
-			if (!(expected == actual))
+		if (Float.compare(expected, actual) == 0)
+			return;
+		if (!(Math.abs(expected - actual) <= delta))
 				failNotEquals(message, new Float(expected), new Float(actual));
-		} else if (!(Math.abs(expected-actual) <= delta))
-      		failNotEquals(message, new Float(expected), new Float(actual));
 	}
 	/**
 	 * Asserts that two floats are equal concerning a delta. If the expected
@@ -146,7 +140,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
 	static public void assertEquals(String message, boolean expected, boolean actual) {
-    		assertEquals(message, new Boolean(expected), new Boolean(actual));
+    		assertEquals(message, Boolean.valueOf(expected), Boolean.valueOf(actual));
   	}
 	/**
 	 * Asserts that two booleans are equal.
@@ -220,10 +214,16 @@ public class Assert {
 		assertTrue(message, object != null);
 	}
 	/**
-	 * Asserts that an object is null.
+	 * Asserts that an object is null. If it isn't an {@link AssertionError} is
+	 * thrown.
+	 * Message contains: Expected: <null> but was: object
+	 * 
+	 * @param object
+	 *            Object to check or <code>null</code>
 	 */
 	static public void assertNull(Object object) {
-		assertNull(null, object);
+		String message = "Expected: <null> but was: " + String.valueOf(object);
+		assertNull(message, object);
 	}
 	/**
 	 * Asserts that an object is null.  If it is not
@@ -248,41 +248,42 @@ public class Assert {
 	static public void assertSame(Object expected, Object actual) {
 	    assertSame(null, expected, actual);
 	}
- 	/**
- 	 * Asserts that two objects refer to the same object. If they are not
- 	 * an AssertionFailedError is thrown with the given message.
- 	 */
+	/**
+	 * Asserts that two objects do not refer to the same object. If they do
+	 * refer to the same object an AssertionFailedError is thrown with the
+	 * given message.
+	 */
 	static public void assertNotSame(String message, Object expected, Object actual) {
 		if (expected == actual)
 			failSame(message);
 	}
 	/**
-	 * Asserts that two objects refer to the same object. If they are not
-	 * the same an AssertionFailedError is thrown.
+	 * Asserts that two objects do not refer to the same object. If they do
+	 * refer to the same object an AssertionFailedError is thrown.
 	 */
 	static public void assertNotSame(Object expected, Object actual) {
 		assertNotSame(null, expected, actual);
 	}
 
-	static private void failSame(String message) {
+	static public void failSame(String message) {
 		String formatted= "";
  		if (message != null)
  			formatted= message+" ";
  		fail(formatted+"expected not same");
 	}
 
-	static private void failNotSame(String message, Object expected, Object actual) {
+	static public void failNotSame(String message, Object expected, Object actual) {
 		String formatted= "";
 		if (message != null)
 			formatted= message+" ";
 		fail(formatted+"expected same:<"+expected+"> was not:<"+actual+">");
 	}
 
-	static private void failNotEquals(String message, Object expected, Object actual) {
+	static public void failNotEquals(String message, Object expected, Object actual) {
 		fail(format(message, expected, actual));
 	}
 
-	static String format(String message, Object expected, Object actual) {
+	public static String format(String message, Object expected, Object actual) {
 		String formatted= "";
 		if (message != null)
 			formatted= message+" ";
